fixed bugs belong to buttons

--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -67,6 +67,9 @@
     opacity: 0px;
     border: none;
     height: 100%;
+    cursor: pointer;
+    position: relative;
+    z-index: 20;
 }
 
 .footer-form__button>i {
