--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -45,18 +45,18 @@
     margin: 25px 0px 11px 0;
     width: 100%;
     height: 48px;
-    background: white;
     border-radius: 6px;
 }
 
 .footer-form__input {
     height: 100%;
     flex: 1;
+    background: white;
     padding: 0px 15px;
     font-size: 14px;
     font-weight: 400;
     border: none;
-    border-radius: 6px;
+    border-radius: 6px 0 0 6px;
     outline: none;
 }
 
@@ -68,8 +68,7 @@
     border: none;
     height: 100%;
     cursor: pointer;
-    position: relative;
-    z-index: 20;
+    color: white;
 }
 
 .footer-form__button>i {
