--- a/src/components/top-articles/top-articles.css
+++ b/src/components/top-articles/top-articles.css
@@ -26,6 +26,7 @@
     font-size: 23px;
     font-weight: 600;
     line-height: 32px;
+    cursor: pointer;
     color: white;
     border-radius: 3px;
 }
